--- a/ansible/roles/matlab/defaults/main.yml
+++ b/ansible/roles/matlab/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
 matlab_version: R2012b # can be one of R2012b, R2014a, and (in the future) 2015b.
 matlab_iso_dir: /opt/DevOps/ansible/roles/matlab/files # the folder to look for ISO (now maybe tar) files.
+matlab_product_list: [] # if empty, install everything permitted by the license; otherwise, install only things in it.
