fix shortcut creation

--- a/Docker/sorting_legacy/Dockerfile
+++ b/Docker/sorting_legacy/Dockerfile
@@ -66,7 +66,7 @@ COPY sorting_legacy.yml /tmp/DevOps/ansible
 # run Ansible playbook, clean up, and add MATLAB shortcut.
 RUN ansible-playbook -c local /tmp/DevOps/ansible/sorting_legacy.yml && rm -rf /tmp/DevOps && \
     apt-get clean && rm -rf /var/lib/apt/lists/* && \
-    ln -s /usr/local/MATLAB/R2012b/bin/matlab /root/Desktop/matlab_r2012b
+    ln -s /usr/local/MATLAB/R2012b/bin/matlab /root/matlab_r2012b
 
 # default command: run bash
 CMD ["/bin/bash"]
