--- a/Docker/lab-website/Dockerfile
+++ b/Docker/lab-website/Dockerfile
@@ -6,10 +6,9 @@ MAINTAINER Yimeng Zhang <zym1010@gmail.com>
 
 # add timezone with http://wiki.alpinelinux.org/wiki/Setting_the_timezone (retrieved 2016-01-27)
 # setting (an arbitrary) timezone is important for the Jekyll's timezone setting to work (at least for 2.4 in my experience)
+# forget about it... all you need is tzdata.
 RUN apk --update add tzdata && \
     npm install -g grunt-cli && \
-    cp /usr/share/zoneinfo/Europe/Brussels /etc/localtime && \
-    echo "Europe/Brussels" >  /etc/timezone && \
     rm -rf /tmp/* && rm -rf /var/cache/apk/*
 
 # default command: run bash
