--- a/Docker/lab-data-management/Dockerfile
+++ b/Docker/lab-data-management/Dockerfile
@@ -4,4 +4,4 @@ FROM continuumio/miniconda
 MAINTAINER Yimeng Zhang <zym1010@gmail.com>
 
 COPY conda_lab-data-management.sh /tmp/
-RUN ./conda_lab-data-management.sh && rm /tmp/conda_lab-data-management.sh
+RUN /tmp/conda_lab-data-management.sh && rm /tmp/conda_lab-data-management.sh
