--- a/install_scripts/caffe-rc3/Makefile.config.rc3
+++ b/install_scripts/caffe-rc3/Makefile.config.rc3
@@ -56,7 +56,7 @@ BLAS_LIB := ${HOME}/lib/OpenBLAS/lib
 
 # This is required only if you will compile the matlab interface.
 # MATLAB directory should contain the mex binary in /bin.
-MATLAB_DIR := /usr/local/MATLAB/R2014a/
+# MATLAB_DIR := /usr/local/MATLAB/R2014a/
 # MATLAB_DIR := /Applications/MATLAB_R2012b.app
 
 # NOTE: this is required only if you will compile the python interface.
