--- a/shell_scripts/caffe/Makefile.config.rc3
+++ b/shell_scripts/caffe/Makefile.config.rc3
@@ -25,7 +25,7 @@ USE_CUDNN := 1
 # CUSTOM_CXX := g++
 
 # CUDA directory contains bin/ and lib/ directories that we need.
-CUDA_DIR := /usr/local/cuda
+CUDA_DIR := ${HOME}/cuda
 # On Ubuntu 14.04, if cuda tools are installed via
 # "sudo apt-get install nvidia-cuda-toolkit" then use this instead:
 # CUDA_DIR := /usr
