--- a/shell_scripts/caffe/Makefile.config.rc3
+++ b/shell_scripts/caffe/Makefile.config.rc3
@@ -22,7 +22,7 @@ USE_CUDNN := 1
 
 # To customize your choice of compiler, uncomment and set the following.
 # N.B. the default for Linux is g++ and the default for OSX is clang++
-# CUSTOM_CXX := g++
+CUSTOM_CXX := g++-4.9
 
 # CUDA directory contains bin/ and lib/ directories that we need.
 CUDA_DIR := ${HOME}/cuda
@@ -32,12 +32,8 @@ CUDA_DIR := ${HOME}/cuda
 
 # CUDA architecture setting: going with all of them.
 # For CUDA < 6.0, comment the *_50 lines for compatibility.
-CUDA_ARCH := -gencode arch=compute_20,code=sm_20 \
-		-gencode arch=compute_20,code=sm_21 \
-		-gencode arch=compute_30,code=sm_30 \
-		-gencode arch=compute_35,code=sm_35 \
-		-gencode arch=compute_50,code=sm_50 \
-		-gencode arch=compute_50,code=compute_50
+CUDA_ARCH := -gencode arch=compute_35,code=sm_35 \
+		-gencode arch=compute_52,code=sm_52
 
 # BLAS choice:
 # atlas for ATLAS (default)
@@ -65,7 +61,7 @@ BLAS_LIB := ${HOME}/lib/OpenBLAS/lib
 		/usr/lib/python2.7/dist-packages/numpy/core/include
 # Anaconda Python distribution is quite popular. Include path:
 # Verify anaconda location, sometimes it's in root.
-ANACONDA_HOME := $(HOME)/miniconda2/envs/cafferc3
+ANACONDA_HOME := $(HOME)/miniconda2/envs/caffe
 PYTHON_INCLUDE := $(ANACONDA_HOME)/include \
 		 $(ANACONDA_HOME)/include/python2.7 \
 		 $(ANACONDA_HOME)/lib/python2.7/site-packages/numpy/core/include \
