add more bookkeeping for tensorflow hack

--- a/Docker/tensorflow/0.11.0rc0/centos6/py27/gpu/Dockerfile
+++ b/Docker/tensorflow/0.11.0rc0/centos6/py27/gpu/Dockerfile
@@ -15,7 +15,7 @@ RUN echo "===> install everything"  && \
     tar -zxf v0.11.0rc0.tar.gz && rm -rf v0.11.0rc0.tar.gz && cd tensorflow-0.11.0rc0 && \
     cp /tmp/CROSSTOOL.tpl third_party/gpus/crosstool/CROSSTOOL.tpl && ls -la third_party/gpus/crosstool && \
     cp /tmp/crosstool_wrapper_driver_is_not_gcc.tpl third_party/gpus/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc.tpl && ls -la third_party/gpus/crosstool/clang/bin && \
-    scl enable devtoolset-3 'PYTHON_BIN_PATH=~/conda/envs/tf/bin/python PATH=~/conda/envs/tf/bin:~/bin:$PATH TF_NEED_GCP=0 TF_NEED_CUDA=1 ./configure && ~/bin/bazel build -c opt --config=cuda --spawn_strategy=standalone --genrule_strategy=standalone --verbose_failures //tensorflow/tools/pip_package:build_pip_package' && \
+    scl enable devtoolset-3 'PYTHON_BIN_PATH=~/conda/envs/tf/bin/python PATH=~/conda/envs/tf/bin:~/bin:$PATH TF_NEED_GCP=0 TF_NEED_CUDA=1 TF_CUDA_COMPUTE_CAPABILITIES="5.2" ./configure && ~/bin/bazel build -c opt --config=cuda --spawn_strategy=standalone --genrule_strategy=standalone --verbose_failures //tensorflow/tools/pip_package:build_pip_package' && \
     scl enable devtoolset-3 'PATH=~/conda/envs/tf/bin:$PATH bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg' && \
     cd .. && rm -rf tensorflow-0.11.0rc0 && ~/conda/bin/conda clean --yes --all && rm -rf ~/conda && rm -rf .cache
 
